--- a/project_a/entrega2.ipynb
+++ b/project_a/entrega2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 366,
    "id": "bcf3d233",
    "metadata": {},
    "outputs": [],
@@ -17,20 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 367,
    "id": "69c51f32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients_df = pd.read_csv(\"Proyecto_Caso_Base/clients.csv\")\n",
-    "depots_df = pd.read_csv(\"Proyecto_Caso_Base/depots.csv\")\n",
-    "vehicles_df = pd.read_csv(\"Proyecto_Caso_Base/vehicles.csv\")\n",
+    "clients_df = pd.read_csv(\"Proyecto_A_Caso3/clients.csv\")\n",
+    "depots_df = pd.read_csv(\"Proyecto_A_Caso3/depots.csv\")\n",
+    "vehicles_df = pd.read_csv(\"Proyecto_A_Caso3/vehicles.csv\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 368,
    "id": "67996b48",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 369,
    "id": "91d6ed94",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 370,
    "id": "ed3801ab",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 371,
    "id": "c05d9b82",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 372,
    "id": "30032289",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 373,
    "id": "d1287356",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 374,
    "id": "56865115",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 375,
    "id": "15e21ac2",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 376,
    "id": "c8a44d7d",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
        "29           30        27     18"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 377,
    "id": "9230a28a",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 378,
    "id": "346d517d",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 379,
    "id": "452d87f5",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 380,
    "id": "ea6046af",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 381,
    "id": "1cbe89a7",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 382,
    "id": "23eb113b",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 383,
    "id": "b1a63302",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 384,
    "id": "3629b8dc",
    "metadata": {},
    "outputs": [],
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 385,
    "id": "edc88bd1",
    "metadata": {},
    "outputs": [],
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 386,
    "id": "aeeb9491",
    "metadata": {},
    "outputs": [],
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 387,
    "id": "037e391a",
    "metadata": {},
    "outputs": [],
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 388,
    "id": "0cda8944",
    "metadata": {},
    "outputs": [],
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 389,
    "id": "ee2766ac",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 390,
    "id": "7d39b80d",
    "metadata": {},
    "outputs": [],
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 391,
    "id": "8d2ed3bc",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 392,
    "id": "7d691ecc",
    "metadata": {},
    "outputs": [],
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 393,
    "id": "3b4a5e7c",
    "metadata": {},
    "outputs": [
@@ -819,15 +819,15 @@
      "text": [
       "GLPSOL--GLPK LP/MIP Solver 5.0\n",
       "Parameter(s) specified in the command line:\n",
-      " --write C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpc78jqcg6.glpk.raw --wglp C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpnrf9vyyi.glpk.glp\n",
-      " --cpxlp C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpp0sp1kba.pyomo.lp\n",
-      "Reading problem data from 'C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpp0sp1kba.pyomo.lp'...\n",
-      "C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpp0sp1kba.pyomo.lp:345310: warning: lower bound of variable 'x2' redefined\n",
-      "C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpp0sp1kba.pyomo.lp:345310: warning: upper bound of variable 'x2' redefined\n",
+      " --write C:\\Users\\jafie\\AppData\\Local\\Temp\\tmp3_16k6oo.glpk.raw --wglp C:\\Users\\jafie\\AppData\\Local\\Temp\\tmphf6ower4.glpk.glp\n",
+      " --cpxlp C:\\Users\\jafie\\AppData\\Local\\Temp\\tmproiietmw.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\jafie\\AppData\\Local\\Temp\\tmproiietmw.pyomo.lp'...\n",
+      "C:\\Users\\jafie\\AppData\\Local\\Temp\\tmproiietmw.pyomo.lp:345310: warning: lower bound of variable 'x2' redefined\n",
+      "C:\\Users\\jafie\\AppData\\Local\\Temp\\tmproiietmw.pyomo.lp:345310: warning: upper bound of variable 'x2' redefined\n",
       "35412 rows, 35472 columns, 171192 non-zeros\n",
       "32760 integer variables, all of which are binary\n",
       "378070 lines were read\n",
-      "Writing problem data to 'C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpnrf9vyyi.glpk.glp'...\n",
+      "Writing problem data to 'C:\\Users\\jafie\\AppData\\Local\\Temp\\tmphf6ower4.glpk.glp'...\n",
       "312603 lines were written\n",
       "GLPK Integer Optimizer 5.0\n",
       "35412 rows, 35472 columns, 171192 non-zeros\n",
@@ -848,26 +848,24 @@
       "31037 rows, 31097 columns, 149365 non-zeros\n",
       "      0: obj =   1.504109228e+06 inf =   2.633e+02 (14)\n",
       "Perturbing LP to avoid stalling [319]...\n",
-      "   3867: obj =   1.262447836e+06 inf =   1.092e+02 (14) 10\n",
-      "   5631: obj =   1.209884856e+06 inf =   7.508e-07 (0) 6\n",
-      "*  7688: obj =   6.185835449e+05 inf =   5.416e-06 (8750) 7\n",
+      "   5631: obj =   1.209884856e+06 inf =   7.508e-07 (0) 16\n",
+      "* 10295: obj =   4.774038599e+05 inf =   8.703e-06 (2780) 16\n",
       "Removing LP perturbation [10716]...\n",
-      "* 10716: obj =   4.755969904e+05 inf =   3.289e-14 (0) 11\n",
+      "* 10716: obj =   4.755969904e+05 inf =   3.289e-14 (0) 2\n",
       "OPTIMAL LP SOLUTION FOUND\n",
       "Integer optimization begins...\n",
       "Long-step dual simplex will be used\n",
       "+ 10716: mip =     not found yet >=              -inf        (1; 0)\n",
-      "+ 11120: mip =     not found yet >=   4.755969904e+05        (6; 0)\n",
-      "+ 11451: mip =     not found yet >=   4.755969904e+05        (16; 0)\n",
-      "+ 11686: mip =     not found yet >=   4.755969904e+05        (35; 0)\n",
-      "+ 11872: mip =     not found yet >=   4.755969904e+05        (58; 0)\n",
+      "+ 11201: mip =     not found yet >=   4.755969904e+05        (10; 0)\n",
+      "+ 11699: mip =     not found yet >=   4.755969904e+05        (36; 0)\n",
+      "+ 11975: mip =     not found yet >=   4.755969904e+05        (74; 0)\n",
       "+ 12139: >>>>>   4.758109860e+05 >=   4.755969904e+05 < 0.1% (80; 0)\n",
       "+ 12326: >>>>>   4.755969904e+05 >=   4.755969904e+05 < 0.1% (79; 21)\n",
       "+ 12326: mip =   4.755969904e+05 >=     tree is empty   0.0% (0; 179)\n",
       "INTEGER OPTIMAL SOLUTION FOUND\n",
-      "Time used:   44.5 secs\n",
+      "Time used:   26.9 secs\n",
       "Memory used: 64.7 Mb (67846433 bytes)\n",
-      "Writing MIP solution to 'C:\\Users\\jafie\\AppData\\Local\\Temp\\tmpc78jqcg6.glpk.raw'...\n",
+      "Writing MIP solution to 'C:\\Users\\jafie\\AppData\\Local\\Temp\\tmp3_16k6oo.glpk.raw'...\n",
       "70893 lines were written\n",
       "Estado: ok\n",
       "Óptimo: 475596.9904000002\n"
@@ -886,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 394,
    "id": "2f048a3e",
    "metadata": {},
    "outputs": [
@@ -954,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 395,
    "id": "d39fe879",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 396,
    "id": "b62cd122",
    "metadata": {},
    "outputs": [],
@@ -1053,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 397,
    "id": "c739a399",
    "metadata": {},
    "outputs": [],
@@ -1127,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 398,
    "id": "19ae825b",
    "metadata": {},
    "outputs": [
