--- a/project_a/entrega3.ipynb
+++ b/project_a/entrega3.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 723,
    "id": "6ab0d8ad",
    "metadata": {},
    "outputs": [
@@ -338,19 +338,12 @@
       "DEM {1: 12, 2: 15, 3: 15, 4: 6, 5: 5, 6: 11, 7: 12, 8: 10, 9: 15}\n",
       "cap vehiculos\n",
       "Rango vehiculos:  [145.85207096486445, 1304.605971281605, 953.172608610164, 17.302304187458727, 16.627680130757895, 13.602810739289229]\n",
-      "Debug inicial:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'fit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[721], line 280\u001b[0m\n\u001b[0;32m    278\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDebug inicial:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, ind \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(population[:\u001b[38;5;241m5\u001b[39m]):\n\u001b[1;32m--> 280\u001b[0m     fit, costo, penal \u001b[38;5;241m=\u001b[39m \u001b[43mfitness\u001b[49m\u001b[43m(\u001b[49m\u001b[43mind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDIST_correctos_ids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mCOORDENADAS_CLIENTES\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcap_vehiculos_transform\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDEM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclients_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mClientID\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtolist\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrango_vehiculos\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    281\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInd \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: fitness total = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfit\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, costo real = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcosto\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, penalización = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpenal\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    283\u001b[0m \u001b[38;5;66;03m# Evaluar la población inicial\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[721], line 207\u001b[0m, in \u001b[0;36mfitness\u001b[1;34m(individual, distancias, deposito_id, coords_clientes, cap_vehiculos, dem_clients, clients, rango_vehiculos)\u001b[0m\n\u001b[0;32m    204\u001b[0m         penalizacion \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m \u001b[38;5;241m*\u001b[39m (distancia_total \u001b[38;5;241m-\u001b[39m rango_vehiculos[\u001b[38;5;28mmin\u001b[39m(idx, \u001b[38;5;28mlen\u001b[39m(rango_vehiculos)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)])\n\u001b[0;32m    206\u001b[0m costo_total \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m (Pf \u001b[38;5;241m+\u001b[39m Ft \u001b[38;5;241m+\u001b[39m Cm)  \n\u001b[1;32m--> 207\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInd \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: fitness=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfit\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, penalización=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpenalizacion\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    210\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m costo_total \u001b[38;5;241m+\u001b[39m penalizacion, costo_total, penalizacion\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fit' is not defined"
+      "Debug inicial:\n",
+      "Ind 0: fitness total = 166327.4069737241, costo real = 166327.4069737241, penalización = 0\n",
+      "Ind 1: fitness total = 203647.06884754897, costo real = 203647.06884754897, penalización = 0\n",
+      "Ind 2: fitness total = 160723.33461034743, costo real = 160723.33461034743, penalización = 0\n",
+      "Ind 3: fitness total = 191588.27289390127, costo real = 191588.27289390127, penalización = 0\n",
+      "Ind 4: fitness total = 135464.37947953487, costo real = 135464.37947953487, penalización = 0\n"
      ]
     }
    ],
@@ -668,7 +661,7 @@
     "        if random.random() < mutation_rate:\n",
     "            mutar_individuo(offspring[idx])\n",
     "            # Repara el individuo después de la mutación\n",
-    "            offspring[idx] = repair_individual(offspring[i], K, cap_vehiculos_transform, DEM)\n",
+    "            offspring[idx] = repair_individual(offspring[idx], K, cap_vehiculos_transform, DEM)\n",
     "\n",
     "    # Evaluar descendencia\n",
     "    # Evaluar descendencia\n",
